[package]
name = "antonwallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { version = "0.30.1", features = ["rand-std"] }
serde_json = "1.0"
pdf = "0.8.1"
reqwest = "0.11"
hex = "0.4.3"
printpdf = "0.6.0"
tokio = "1.33.0"
